--- a/hw-10/flask-alb-app/Dockerfile
+++ b/hw-10/flask-alb-app/Dockerfile
@@ -1,12 +1,15 @@
 FROM python:3.10-slim
 
-WORKDIR /app
+WORKDIR /alb
 
 RUN apt update && \
     apt install -y python3-pip default-libmysqlclient-dev build-essential pkg-config
 
 COPY ./requirements.txt ./requirements.txt
 RUN pip install --upgrade pip && pip install -r ./requirements.txt
-COPY . ./app
+COPY . /alb
+
+COPY ./wait-for.sh /usr/local/bin/wait-for.sh
+RUN chmod +x /usr/local/bin/wait-for.sh
 
 EXPOSE 5000
