--- a/hw-11/flask-alb-app/docker-compose.yaml
+++ b/hw-11/flask-alb-app/docker-compose.yaml
@@ -16,10 +16,8 @@ services:
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
 
   web:
-    build: .
+    image: sotishvilialexander066/flask-alb
     container_name: flask-app
-    ports:
-      - "5000:5000"
     depends_on:
       - db
     volumes:
@@ -32,6 +30,17 @@ services:
     command: |
       /usr/bin/env sh -c "/usr/local/bin/wait-for.sh db:3306 --
        gunicorn -b 0.0.0.0:5000 app:app"
+
+  nginx:
+    image: nginx
+    container_name: reverse_proxy
+    ports:
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/certs:/etc/nginx/certs
+    depends_on:
+      - web
 
 volumes:
   mariadb-data:
